[gd_scene load_steps=11 format=3 uid="uid://u8lx2vqcwq0k"]

[ext_resource type="Theme" uid="uid://sct70k5b8gxf" path="res://Assets/Theme.tres" id="1_1q51l"]
[ext_resource type="Script" path="res://Scripts/UI/bird_stat.gd" id="1_xo3ow"]
[ext_resource type="SpriteFrames" uid="uid://nogep5revgt0" path="res://Assets/Birds/default-bird.tres" id="2_7dend"]
[ext_resource type="Theme" uid="uid://dvj1la8mst6pa" path="res://Assets/hollow-button.tres" id="2_k7s8g"]
[ext_resource type="Texture2D" uid="uid://dgjcs16mhihwj" path="res://Assets/Birds/NewBird/eurasian-blue-tit.png" id="3_6i1ga"]
[ext_resource type="Texture2D" uid="uid://dngsxba5ow8ep" path="res://Assets/theme-frame.png" id="4_jq3py"]
[ext_resource type="Script" path="res://Scripts/UI/bird_name_ui.gd" id="4_wcvlp"]
[ext_resource type="Script" path="res://Scripts/UI/grid_manager.gd" id="6_pcyu0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_itgj4"]
atlas = ExtResource("3_6i1ga")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck5gq"]
atlas = ExtResource("4_jq3py")
region = Rect2(64, 0, 64, 64)

[node name="BirdStat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xo3ow")
default_frames = ExtResource("2_7dend")

[node name="Panel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1q51l")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 80

[node name="Content" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="BirdNameData" type="Label" parent="Panel/MarginContainer/Content/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 64)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderInfo"
text = "Eurasian Blue tit"
vertical_alignment = 1
text_overrun_behavior = 1
script = ExtResource("4_wcvlp")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/Content/HBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/Content/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme = ExtResource("2_k7s8g")
theme_override_font_sizes/font_size = 80
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/Content"]
layout_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/Content/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("6_pcyu0")

[node name="BirdStats" type="MarginContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HeadingContainer" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer"]
layout_mode = 2
theme_override_constants/margin_right = 16

[node name="ColorRect" type="ColorRect" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/MarginContainer"]
custom_minimum_size = Vector2(240, 240)
layout_direction = 2
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_k7s8g")

[node name="BirdImage" type="TextureRect" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/MarginContainer/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -110.0
offset_right = 110.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_itgj4")

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ck5gq")

[node name="CurrentBirdStats" type="VBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="RemainingStamina" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/CurrentBirdStats"]
layout_mode = 2
theme = ExtResource("1_1q51l")

[node name="Heading2" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/CurrentBirdStats/RemainingStamina"]
clip_contents = false
layout_mode = 2
theme = ExtResource("1_1q51l")
theme_type_variation = &"StatTextRich"
bbcode_enabled = true
text = "[u]Stamina:[/u]"
fit_content = true
autowrap_mode = 0

[node name="CurrentStaminaData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/CurrentBirdStats/RemainingStamina"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_1q51l")
theme_type_variation = &"StatText"
text = "37%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Status" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/CurrentBirdStats"]
layout_mode = 2
theme = ExtResource("1_1q51l")

[node name="Heading" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/CurrentBirdStats/Status"]
clip_contents = false
layout_mode = 2
theme = ExtResource("1_1q51l")
theme_type_variation = &"StatTextRich"
bbcode_enabled = true
text = "[color=#9f9f9f][u]Status:[/u][/color] "
fit_content = true
autowrap_mode = 0

[node name="StatusData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/CurrentBirdStats/Status"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_1q51l")
theme_type_variation = &"StatText"
text = "Not Generated"
horizontal_alignment = 2
vertical_alignment = 1
text_overrun_behavior = 1
script = ExtResource("4_wcvlp")

[node name="Age" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/CurrentBirdStats"]
layout_mode = 2
theme = ExtResource("1_1q51l")

[node name="Heading" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/CurrentBirdStats/Age"]
clip_contents = false
layout_mode = 2
theme = ExtResource("1_1q51l")
theme_type_variation = &"StatTextRich"
bbcode_enabled = true
text = "[color=#9f9f9f][u]Age:[/u][/color] "
fit_content = true
autowrap_mode = 0

[node name="AgeData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/BirdStats/HeadingContainer/CurrentBirdStats/Age"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_1q51l")
theme_type_variation = &"StatText"
text = "Adult"
horizontal_alignment = 2
vertical_alignment = 1
text_overrun_behavior = 1
script = ExtResource("4_wcvlp")

[node name="GeneralInfo" type="MarginContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo"]
layout_mode = 2
theme = ExtResource("1_1q51l")
theme_type_variation = &"InfoBox"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSubInfo"
text = "General"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Family" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_1q51l")

[node name="Heading2" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer/Family"]
clip_contents = false
layout_mode = 2
theme = ExtResource("1_1q51l")
theme_type_variation = &"StatTextRich"
theme_override_font_sizes/italics_font_size = 56
bbcode_enabled = true
text = "[color=#9f9f9f][u]Family:[/u][/color] "
fit_content = true
autowrap_mode = 0

[node name="FamilyData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer/Family"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_1q51l")
theme_type_variation = &"StatText"
text = "Blue tit"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="Scientific" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Heading2" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer/Scientific"]
clip_contents = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StatTextRich"
bbcode_enabled = true
text = "[color=#9f9f9f][u]Scientific Name:[/u][/color] "
fit_content = true
autowrap_mode = 2

[node name="ScientificData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer/Scientific"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_1q51l")
theme_type_variation = &"StatText"
text = "Blue tit"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="Gender" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Heading" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer/Gender"]
clip_contents = false
layout_mode = 2
theme_type_variation = &"StatTextRich"
theme_override_font_sizes/italics_font_size = 56
bbcode_enabled = true
text = "[color=#9f9f9f][u]Gender:[/u][/color] "
fit_content = true
autowrap_mode = 0

[node name="GenderData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer/Gender"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_1q51l")
theme_type_variation = &"StatText"
text = "Male
"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="Diet" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Heading" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer/Diet"]
clip_contents = false
layout_mode = 2
theme_type_variation = &"StatTextRich"
theme_override_font_sizes/italics_font_size = 56
bbcode_enabled = true
text = "[color=#9f9f9f][u]Diet:[/u][/color] "
fit_content = true
autowrap_mode = 0

[node name="DietData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer/Diet"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 64)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StatText"
text = "Seeds"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="DateFound" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Heading" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer/DateFound"]
clip_contents = false
layout_mode = 2
theme_type_variation = &"StatTextRich"
bbcode_enabled = true
text = "[color=#9f9f9f][u]Date Found:[/u][/color] "
fit_content = true
autowrap_mode = 0

[node name="DateFoundData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/GeneralInfo/PanelContainer/VBoxContainer/DateFound"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StatText"
text = "2/2/2024"
horizontal_alignment = 2

[node name="Description" type="MarginContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Description"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme = ExtResource("1_1q51l")
theme_type_variation = &"InfoBox"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Description/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Description/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSubInfo"
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionData" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Description/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_1q51l")
theme_type_variation = &"StatTextRich"
theme_override_colors/default_color = Color(1, 1, 1, 1)
fit_content = true

[node name="Traits" type="MarginContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits"]
layout_mode = 2
theme = ExtResource("1_1q51l")
theme_type_variation = &"InfoBox"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSubInfo"
text = "Traits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Swim" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Heading2" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer/Swim"]
clip_contents = false
layout_mode = 2
theme_type_variation = &"StatTextRich"
bbcode_enabled = true
text = "[color=#9f9f9f][u]Can Swim:[/u][/color] "
fit_content = true
autowrap_mode = 0

[node name="SwimData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer/Swim"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StatText"
text = "Yes"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Fly" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Heading2" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer/Fly"]
clip_contents = false
layout_mode = 2
theme_type_variation = &"StatTextRich"
bbcode_enabled = true
text = "[color=#9f9f9f][u]Can Fly:[/u][/color] "
fit_content = true
autowrap_mode = 0

[node name="FlyData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer/Fly"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StatText"
text = "Yes"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Predator" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Heading2" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer/Predator"]
clip_contents = false
layout_mode = 2
theme_type_variation = &"StatTextRich"
bbcode_enabled = true
text = "[color=#9f9f9f][u]Predator:[/u][/color] "
fit_content = true
autowrap_mode = 0

[node name="PredatorData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer/Predator"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StatText"
text = "Yes"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CleaningMethods" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Heading2" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer/CleaningMethods"]
clip_contents = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StatTextRich"
bbcode_enabled = true
text = "[color=#9f9f9f][u]Cleaning Methods:[/u][/color] "
fit_content = true
autowrap_mode = 2

[node name="CleaningMethodsData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer/CleaningMethods"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StatText"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2
max_lines_visible = 2

[node name="ParentingStyle" type="HBoxContainer" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Heading2" type="RichTextLabel" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer/ParentingStyle"]
clip_contents = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StatTextRich"
bbcode_enabled = true
text = "[color=#9f9f9f][u]Parenting Style:[/u][/color] "
fit_content = true
autowrap_mode = 2

[node name="ParentingStyleData" type="Label" parent="Panel/MarginContainer/Content/ScrollContainer/GridContainer/Traits/PanelContainer/VBoxContainer/ParentingStyle"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"StatText"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2
max_lines_visible = 2

[node name="NewFrameTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3

[connection signal="pressed" from="Panel/MarginContainer/Content/HBoxContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="draw" from="Panel/MarginContainer/Content/ScrollContainer" to="." method="_on_scroll_container_draw"]
[connection signal="timeout" from="NewFrameTimer" to="." method="_on_new_frame_timer_timeout"]
